src/objects/inscor__Customs_Entry__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Customs Entries</relationshipLabel>
        <relationshipName>Customs_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Customs_Value__c</fullName>
        <label>Customs Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Date_of_Entry__c</fullName>
        <label>Date of Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Commodity_Code__c</fullName>
        <label>Entry Commodity Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Number__c</fullName>
        <label>Entry Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Processing_Unit_Number__c</fullName>
        <label>Entry Processing Unit Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Entry_Status__c</fullName>
        <label>Entry Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Circulation</fullName>
                </value>
                <value>
                    <fullName>Customs Warehouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Entry_Type__c</fullName>
        <label>Entry Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Import Entry</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Customs Entries</relationshipLabel>
        <relationshipName>Customs_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Movement_Reference_Number__c</fullName>
        <label>Movement Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Unique_Consignment_Reference__c</fullName>
        <label>Unique Consignment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__VAT_Value__c</fullName>
        <label>VAT Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Customs Entry</label>
    <nameField>
        <displayFormat>CE-{0}</displayFormat>
        <label>Customs Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customs Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>